<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

<!-- tambahan icon dan tulisan-->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/ic_launcher_news_2" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="146dp"
        android:text="Android News App"
        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
        android:textSize="20sp" />

    <!---->
    <group android:checkableBehavior="single">



        <item
            android:id="@+id/entertainment"
            android:title="@string/entertainment"
            android:icon="@drawable/ic_entertainment"/>
        <item
            android:id="@+id/sports"
            android:title="@string/sport"
            android:icon="@drawable/ic_sports"/>
        <item
            android:id="@+id/technology"
            android:title="@string/technology"
            android:icon="@drawable/ic_technology"/>
        <item
            android:id="@+id/favorite"
            android:title="@string/favorite"
            android:icon="@drawable/favorite_i"/>
    </group>

    <item android:title="@string/judulmenu">
        <menu>
            <!--<item-->
                <!--android:id="@+id/about"-->
                <!--android:icon="@drawable/ic_about"-->
                <!--android:title="@string/about" />-->
            <item
                android:id="@+id/bahasa"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/language" />
            <item
                android:id="@+id/alarm"
                android:icon="@drawable/ic_access_alarm_black_36dp"
                android:title="@string/alarm" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
