<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">



        <EditText
            android:id="@+id/username"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="190dp"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/cnf_password"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/cnf_password"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimary"
            android:text="@string/btn_register"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_have_account" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/login_here"
            android:paddingLeft="10dp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>